# A4_Tycoon

./: .gitignore  ApartmentBuilding.cpp  ApartmentBuilding.h  BusinessBuilding.cpp  BusinessBuilding.h  BusinessTennant.cpp  BusinessTennant.h  CMakeLists.txt  Property.cpp  Property.h  README.md  ResidentialBuilding.cpp  ResidentialBuilding.h  ResidentialTennant.cpp  ResidentialTennant.h  Tennant.cpp  Tennant.h  Tycoon.cpp  Tycoon.h  main.cpp
